# qwen-inference

./: .gitignore  LOG.md  NOTES.md  README.md  competition-guide.md  pyproject.toml
evals/: run_eval_local.py
qwen-inference/: .dockerignore  Dockerfile  README.md  pyproject.toml
qwen-inference/src/qwen_inference/: __init__.py  loader.py  main.py  server.py  tokenizer.py  types.py  vllm_plugin.py
qwen-inference/src/qwen_inference/backends/: __init__.py  baseline.py  protocol.py  vllm.py
qwen-inference/src/qwen_inference/backends/custom/: __init__.py  backend.py  kernels.py  loader.py  model.py
qwen-inference/tests/: test_int4_kernels.py  test_parity.py
scripts/: benchmark.sh  download_weights.py  modeling_qwen3_custom.py  profile.sh  pyproject.toml  quantize-requirements.txt  quantize_gptq.py  submit.sh  test_custom_lm_head_load.py
