[project]
name = "qwen-inference"
version = "0.1.0"
description = "Qwen3.5-4B inference server for the AdaptFM competition"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "transformers>=4.56.0",
    "uvicorn[standard]>=0.32.0",
]

[project.scripts]
qwen-serve = "qwen_inference.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "safetensors>=0.5.0",
]
vllm = [
    "vllm==0.19.1",
]

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers.git" }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "gpu: tests requiring CUDA",
    "integration: tests requiring model weights on disk",
]

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"
